--- a/flexbox/flex002-eixos/index.html
+++ b/flexbox/flex002-eixos/index.html
@@ -13,9 +13,9 @@
         .item{
             background-color: bisque;
             border: 1px solid darkblue;
-            flex: auto;
-            text-align: center;
             
+            text-align: center;
+            padding: 5px;
         }
     </style>
 </head>
