--- a/flexbox/flex002-eixos/index.html
+++ b/flexbox/flex002-eixos/index.html
@@ -9,13 +9,20 @@
             background-color: rgb(255, 83, 64);
             display: flex;
             text-align: center;
+            /* flex-wrap: wrap;
+            flex-direction: column; */
+            flex-flow: column wrap;
+            height: 500px;
         }
         .item{
             background-color: bisque;
             border: 1px solid darkblue;
-            
             text-align: center;
             padding: 5px;
+
+            height: 60px;
+            flex: auto;
+            
         }
     </style>
 </head>
