--- a/flexbox/flex002-eixos/index.html
+++ b/flexbox/flex002-eixos/index.html
@@ -13,6 +13,7 @@
             flex-direction: column; */
             flex-flow: column wrap;
             height: 500px;
+            justify-content: flex-start;
         }
         .item{
             background-color: bisque;
