--- a/flexbox/flex003-alinhamento/index.html
+++ b/flexbox/flex003-alinhamento/index.html
@@ -11,8 +11,9 @@
             text-align: center;
             /* flex-wrap: wrap;
             flex-direction: column; */
-            flex-flow: column wrap;
-            height: 500px;
+            flex-flow: row wrap;
+    
+            justify-content: space-evenly;
         }
         .item{
             background-color: bisque;
@@ -20,21 +21,24 @@
             text-align: center;
             padding: 5px;
 
-            height: 60px;
-            flex: auto;
+ 
+  
+            font-variant: small-caps;
+            font-family: Arial, Helvetica, sans-serif;
+ 
             
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="item">a</div>
-        <div class="item">b</div>
-        <div class="item">c</div>
-        <div class="item">d</div>
-        <div class="item">e</div>
-        <div class="item">f</div>
-        <div class="item">g</div>
+        <div class="item">conteúdo do item a</div>
+        <div class="item">conteúdo do item b</div>
+        <div class="item">conteúdo do item c</div>
+        <div class="item">conteúdo do item d</div>
+        <div class="item">conteúdo do item e</div>
+        <div class="item">conteúdo do item f</div>
+        <div class="item">conteúdo do item g</div>
     </div>
 </body>
 </html>
