--- a/flexbox/flex003-alinhamento/index.html
+++ b/flexbox/flex003-alinhamento/index.html
@@ -13,7 +13,9 @@
             flex-direction: column; */
             flex-flow: row wrap;
     
+            height: 500px;
             justify-content: space-evenly;
+            align-items:  center;
         }
         .item{
             background-color: bisque;
@@ -21,8 +23,6 @@
             text-align: center;
             padding: 5px;
 
- 
-  
             font-variant: small-caps;
             font-family: Arial, Helvetica, sans-serif;
  
