--- a/flexbox/flex003-alinhamento/index.html
+++ b/flexbox/flex003-alinhamento/index.html
@@ -15,7 +15,9 @@
     
             height: 500px;
             justify-content: space-evenly;
-            align-items:  center;
+            /* align-items:  center; */
+            align-content: end;
+            
         }
         .item{
             background-color: bisque;
