--- a/flexbox/flex004-itens/index.html
+++ b/flexbox/flex004-itens/index.html
@@ -16,7 +16,7 @@
             height: 500px;
             justify-content: space-evenly;
             /* align-items:  center; */
-            align-content: end;
+            align-content: flex-start;
             
         }
         .item{
@@ -35,7 +35,7 @@
     <div class="container">
         <div class="item">conteúdo do item a</div>
         <div class="item">conteúdo do item b</div>
-        <div class="item">conteúdo do item c</div>
+        <div class="item" style="align-self: flex-end;">conteúdo do item c</div>
         <div class="item">conteúdo do item d</div>
         <div class="item">conteúdo do item e</div>
         <div class="item">conteúdo do item f</div>
