--- a/flexbox/flex004-itens/index.html
+++ b/flexbox/flex004-itens/index.html
@@ -16,7 +16,7 @@
             height: 500px;
             justify-content: space-evenly;
             /* align-items:  center; */
-            align-content: flex-start;
+            align-items: flex-start;
             
         }
         .item{
@@ -27,6 +27,7 @@
 
             font-variant: small-caps;
             font-family: Arial, Helvetica, sans-serif;
+            border-radius: 50%;
             
         }
     </style>
@@ -37,7 +38,7 @@
         <div class="item">conteúdo do item b</div>
         <div class="item" style="align-self: flex-end;">conteúdo do item c</div>
         <div class="item">conteúdo do item d</div>
-        <div class="item">conteúdo do item e</div>
+        <div class="item" style="align-self: stretch;">conteúdo do item e</div>
         <div class="item">conteúdo do item f</div>
         <div class="item">conteúdo do item g</div>
     </div>
