--- a/flexbox/flex004-itens/flex-basis.html
+++ b/flexbox/flex004-itens/flex-basis.html
@@ -11,7 +11,7 @@
             text-align: center;
             /* flex-wrap: wrap;
             flex-direction: column; */
-            flex-flow: row wrap;
+            flex-flow: row nowrap;
     
             height: 500px;
             justify-content: space-evenly;
@@ -36,9 +36,9 @@
     <div class="container">
         <div class="item">conteúdo do item a</div>
         <div class="item">conteúdo do item b</div>
-        <div class="item" style="align-self: flex-end;">conteúdo do item c</div>
+        <div class="item">conteúdo do item c</div>
         <div class="item">conteúdo do item d</div>
-        <div class="item" style="align-self: stretch;">conteúdo do item e</div>
+        <div class="item">conteúdo do item e</div>
         <div class="item">conteúdo do item f</div>
         <div class="item">conteúdo do item g</div>
     </div>
